onerpm.com (archived on 2014-02-27)
{
  "alexa_rank": 640986,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 7818,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.03,
  "homepage_snapshot_redirected_domain": "onerpm.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140326170408id_/https://onerpm.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140326170408id_/http%3A//onerpm.com",
  "interval": "2014_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "onerpm.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140227181423id_/https%3A//onerpm.com/about/privacy",
  "policy_title": "Privacy Policy | Music Distribution | Sell Music on iTunes | ONErpm",
  "policy_url": "onerpm.com/about/privacy",
  "sha1": "3aa811a64c6fcdc750fda1d3b4e708db80773f5f",
  "simhash": 10397623043757244894,
  "simhash_updated": false,
  "site_hostname": "onerpm.com",
  "site_url": "http://onerpm.com",
  "smog": 14.51,
  "strict_updated": false,
  "timestamp": "20140227181423",
  "word_count": 1283,
  "year": 2014
}

--- a/o/on/one/onerpm.com.html
+++ b/o/on/one/onerpm.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the onerpm.com privacy policy that was archived on 2013-10-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131029122213id_/https%3A//onerpm.com/about/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the onerpm.com privacy policy that was archived on 2014-02-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140227181423id_/https%3A//onerpm.com/about/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta property="fb:admins" content="630418963">
@@ -17,11 +17,12 @@
 <meta name="description" content="Music Distribution | Sell Music on iTunes">
 <title>Privacy Policy | Music Distribution | Sell Music on iTunes | ONErpm</title>
 
-	<link href="/direct/aux?file=&amp;type=css&amp;seqNo=acl&amp;sf=1" rel="stylesheet" type="text/css">
-	
-<script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script src="https://www.google.com/jsapi?key=ABQIAAAA2sCvhCeD0P76cZtKxab2vxQc3ntyFU906UFQpcpbY9hIg77ORBQHMZ6MWsF_sEhfssJ7jN6WMQn8Hw" type="text/javascript"></script>
-	<script src="/direct/aux?file=&amp;type=js&amp;seqNo=acl&amp;sf=1" type="text/javascript"></script>
-	
+<link href="/direct/aux?name=1.g.css&amp;min_code=Gec" rel="stylesheet" type="text/css">
+
+
+<script id="twitter-wjs" src="//web.archive.org/web/20140326170416/https://platform.twitter.com/widgets.js"></script><script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script src="https://www.google.com/jsapi?key=ABQIAAAA2sCvhCeD0P76cZtKxab2vxQc3ntyFU906UFQpcpbY9hIg77ORBQHMZ6MWsF_sEhfssJ7jN6WMQn8Hw" type="text/javascript"></script>
+<script src="/direct/aux?name=1.g.js&amp;min_code=Gec" type="text/javascript"></script>
+
 <script type="text/javascript">google.load("jqueryui", "1.8.11",{uncompressed:false});</script>
 <script type="text/javascript" src="/web/lib/tiny_mce/jquery.tinymce.js"></script>
 <script type="text/javascript">
@@ -38,7 +39,7 @@
 
 </head>
 
-<body class="store_1 body_font body_bg_1">
+<body class="store_1 body_font body_bg_1" data-twttr-rendered="true">
 <div id="fit_class_id" class="body_font_color fit_1">
 <div id="part_header">
 	<div id="loading_gif_main_content" class="loading_gif_main_1"><img src="/web/images/icons/loading.gif"></div>
