--- a/h/hi/hin/hindilyrics.net.html
+++ b/h/hi/hin/hindilyrics.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hindilyrics.net privacy policy that was archived on 2013-09-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130930080112id_/http%3A//www.hindilyrics.net/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hindilyrics.net privacy policy that was archived on 2014-02-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140227235601id_/http%3A//www.hindilyrics.net/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head><title>Privacy Policy - Hindilyrics.net</title>
 <link rel="stylesheet" type="text/css" href="/images/hindi-lyrics.css" charset="utf-8">
@@ -19,26 +19,26 @@
  <p></p><table align="center" width="600"><tbody><tr><td>
  <b>Search Lyrics</b><br>
  <style type="text/css">
- @import url(http://www.google.com/cse/api/branding.css);
+  url(http://www.google.com/cse/api/branding.css);
  </style>
  <div class="cse-branding-right" style="background-color:#FFFFFF;color:#000000">
    <div class="cse-branding-form">
-     <form action="http://www.google.co.in/cse" id="cse-search-box">
+     <form action="http://www.hindilyrics.net/search.php" id="cse-search-box">
        <div>
-         <input type="hidden" name="cx" value="partner-pub-4582401782330525:9630786307">
+         <input type="hidden" name="cx" value="partner-pub-5750997503157155:6499859029">
+ 	<input type="hidden" name="cof" value="FORID:10">
          <input type="hidden" name="ie" value="UTF-8">
-         <input type="text" name="q" size="55">
-         <input type="submit" name="sa" value="Search">
+         <input type="text" name="q" size="70" style="display: inline;">
+         <input type="submit" name="sa" value="Search Hindi Lyrics">
        </div>
      </form>
    </div>
-   <div class="cse-branding-logo">
-     <img src="http://www.google.com/images/poweredby_transparent/poweredby_FFFFFF.gif" alt="Google">
-   </div>
-   <div class="cse-branding-text">
-     Custom Search
-   </div>
  </div>
+ <br>
+ <!-- BEGIN IFRAME TAG - hindilyrics.net_728x90 < - DO NOT MODIFY -->
+ <iframe src="http://ib.adnxs.com/tt?id=2173377&amp;cb=9435974&amp;referrer=[REFERRER_URL]" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" topmargin="0" leftmargin="0" allowtransparency="true" width="728" height="90"></iframe>
+ <!-- END TAG -->
+ 
  </td></tr></tbody></table><p>
  
  </p><table cellpadding="8" align="center"><tbody><tr><td height="1"></td><td rowspan="2" valign="top">
@@ -78,25 +78,10 @@
 </p><p>This privacy policy may change as and when required. However, one thing on which we will not compromise is your right to privacy.</p><p>
 
 </p></td></tr><tr><td valign="top">
- <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript"><!--
- google_ad_client = "pub-5750997503157155";
- google_alternate_ad_url =
- "http://www.hindilyrics.net/google_adsense_script.html";
- google_ad_width = 160;
- google_ad_height = 600;
- google_ad_format = "160x600_as";
- google_ad_type = "text_image";
- google_ad_channel = "";
- google_color_border = "FFFFFF";
- google_color_bg = "FFFFFF";
- google_color_link = "0000FF";
- google_color_text = "000000";
- google_color_url = "000000";
- google_ui_features = "rc:6";
- //-->
- </script>
- <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
- </script>
+ 
+ <!-- BEGIN IFRAME TAG - hindilyrics.net_160x600 < - DO NOT MODIFY -->
+ <iframe src="http://ib.adnxs.com/tt?id=2173379&amp;cb=983548&amp;referrer=[REFERRER_URL]" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" topmargin="0" leftmargin="0" allowtransparency="true" width="160" height="600"></iframe>
+ <!-- END TAG -->
  
  </td></tr></tbody></table>
  <center>
@@ -108,7 +93,7 @@
  <br><br>
  
  
- <script type="text/javascript">
+ <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
     var infolink_pid = 14635;
     var infolink_wsid = 19;
  </script>
