--- a/e/ed/edr/edrugsearch.com.html
+++ b/e/ed/edr/edrugsearch.com.html
@@ -1,18 +1,18 @@
-<!--The following is the downloaded HTML source of the edrugsearch.com privacy policy that was archived on 2013-09-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130923081510id_/http%3A//www.edrugsearch.com/pages/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the edrugsearch.com privacy policy that was archived on 2014-02-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140228020256id_/http%3A//www.edrugsearch.com/pages/privacy-policy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="en"><head><script type="text/javascript" async="" src="//tag.getdrip.com/9608819.js"></script><script id="facebook-jssdk" async="" src="//connect.facebook.net/en_US/all.js"></script><script async="" src="//connect.facebook.net/en_US/fp.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function a(b,c,d){function e(f){if(!c[f]){var g=c[f]={exports:{}};b[f][0].call(g.exports,function(a){var c=b[f][1][a];return e(c?c:a)},g,g.exports,a,b,c,d)}return c[f].exports}for(var f=0;f<d.length;f++)e(d[f]);return e}({"4O2Y62":[function(a,b){function c(a,b){var c=d[a];return c?c.apply(this,b):(e[a]||(e[a]=[]),void e[a].push(b))}var d={},e={};b.exports=c,c.queues=e,c.handlers=d},{}],handle:[function(a,b){b.exports=a("4O2Y62")},{}],YLUGVp:[function(a,b){function c(){var a=m.info=NREUM.info;if(a&&a.agent&&a.licenseKey&&a.applicationID){m.proto="https"===l.split(":")[0]||a.sslForHttp?"https://":"http://",g("mark",["onload",f()]);var b=i.createElement("script");b.src=m.proto+a.agent,i.body.appendChild(b)}}function d(){"complete"===i.readyState&&e()}function e(){g("mark",["domContent",f()])}function f(){return(new Date).getTime()}var g=a("handle"),h=window,i=h.document,j="addEventListener",k="attachEvent",l=(""+location).split("?")[0],m=b.exports={offset:f(),origin:l};i[j]?(i[j]("DOMContentLoaded",e,!1),h[j]("load",c,!1)):(i[k]("onreadystatechange",d),h[k]("onload",c)),g("mark",["firstbyte",f()])},{handle:"4O2Y62"}],loader:[function(a,b){b.exports=a("YLUGVp")},{}]},{},["YLUGVp"]);</script>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<script id="facebook-jssdk" async="" src="//connect.facebook.net/en_US/all.js"></script><script async="" src="//connect.facebook.net/en_US/fp.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script><title>Privacy Policy</title>
+<title>Privacy Policy</title>
 <meta name="description" content="We are firmly committed to respecting the privacy of individuals. Please read the following to learn more about our privacy policy.">
 
 <meta name="dcterms.audience" content="global">
 
-<meta name="dcterms.rights" content="Copyright 2013. edrugsearch.com"> 
+<meta name="dcterms.rights" content="Copyright 2014. edrugsearch.com"> 
 <meta name="google-site-verification" content="q0BdzSDpgIehwkBOU1G8jtAp27DM1DTiFKSAfdPFqp4">
 <meta name="msvalidate.01" content="58671B2C528BE29C21A64098A8FD6530">
-
+<meta content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0" name="viewport">
 <link href="http://www.edrugsearch.com/externals/images/favicon.ico" rel="SHORTCUT ICON" type="image/x-icon">
 <link href="http://www.edrugsearch.com/externals/css/e_drugSearch_div.css" rel="stylesheet" type="text/css">
 <link href="http://www.edrugsearch.com/externals/css/e_drugSearch_table.css" rel="stylesheet" type="text/css">
@@ -57,7 +57,7 @@ baseUrl='http://www.edrugsearch.com/';
 
   $(document).ready(function() {
  
-    $("input#autocomplete").autocomplete({
+    $("input#autocomplete,input#autocompleteS,input#autocompleteLowPrice").autocomplete({
 	minLength:2,
     source:'http://www.edrugsearch.com/live_search',
 	select: function( event, ui ) {
@@ -66,14 +66,15 @@ baseUrl='http://www.edrugsearch.com/';
 });
   });
 </script>
-<!-- Bazaar Voice  -->
-<script type="text/javascript" src="//edrugsearch.ugc.bazaarvoice.com/static/4640-en_us/bvapi.js">
+<!-- Bazaar Voice  
+<script type="text/javascript"
+src="//edrugsearch.ugc.bazaarvoice.com/static/4640-en_us/bvapi.js">
 </script>
 <script type="text/javascript">
     $BV.configure("global", {
-        submissionContainerUrl: "http://www.edrugsearch.com/write-pharmacy-reviews"
+        submissionContainerUrl: "write-pharmacy-reviews"
     });
-</script>
+</script>-->
 <script type="text/javascript"> var site_url = "http://www.edrugsearch.com/";</script>
 <script type="text/javascript">
 
@@ -130,7 +131,7 @@ ref.parentNode.insertBefore(fpw, ref);
       <div class="search_link_top"><p>View drugs by alphabetical list:</p>  <p>		<a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-a">A </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-b">B </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-c">C </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-d">D </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-e">E </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-f">F </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-g">G </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-h">H </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-i">I </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-j">J </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-k">K </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-l">L </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-m">M </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-n">N </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-o">O </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-p">P </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-q">Q </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-r">R </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-s">S </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-t">T </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-u">U </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-v">V </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-w">W </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-x">X </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-y">Y </a><a href="http://www.edrugsearch.com/drug-list/drug-prices-alpha-z">Z </a> </p> </div>
    </aside>
   
-   <div class="sign_in1"> <a href="http://reviews.edrugsearch.com/4640/writereview.htm"></a></div>
+   <!--<div class="sign_in1"> <a  href="http://reviews.edrugsearch.com/4640/writereview.htm"></a></div>-->
  </section><aside class="sign_in">
    
 			
@@ -165,7 +166,7 @@ ref.parentNode.insertBefore(fpw, ref);
 <section class="content_inner"><section class="breadkram ps-top-to-bottom"><div class="contaner">
       <p> 
 
- <span itemscope="" itemtype="http://data-vocabulary.org/Breadcrumb"><strong>You are here:</strong><a href="http://www.edrugsearch.com/">Home</a></span><span>»</span><span itemscope="" itemtype="http://data-vocabulary.org/Breadcrumb"><a href="http://www.edrugsearch.com/pages/privacy-policy" class="active1"><span>Privacy Policy</span></a></span><!--Breadcrumbs end--> </p></div>
+ <span><strong>You are here:</strong><a href="http://www.edrugsearch.com/">Home</a></span><span>»</span><span><a href="http://www.edrugsearch.com/pages/privacy-policy" class="active1"><span>Privacy Policy</span></a></span><!--Breadcrumbs end--> </p></div>
    </section>
 <div class="maindiv">   
 <aside class="Liquid_panel_left">
@@ -429,7 +430,7 @@ Spring Branch, Texas 78070<br>
     <div class="footer_left">
     
      <aside class="copyright">
-      <span>©2013 eDrugSearch, Inc. All Rights Reserved</span> <a href="http://www.edrugsearch.com/pages/privacy-policy">Privacy Policy</a> <a href="http://www.edrugsearch.com/pages/terms">Terms of Use</a> <a href="http://www.edrugsearch.com/contact">Contact Us</a>
+      <span>©2014 eDrugSearch, Inc. All Rights Reserved</span> <a href="http://www.edrugsearch.com/pages/privacy-policy">Privacy Policy</a> <a href="http://www.edrugsearch.com/pages/terms">Terms of Use</a> <a href="http://www.edrugsearch.com/contact">Contact Us</a>
      </aside>
      </div>
     </div>
@@ -446,7 +447,7 @@ Spring Branch, Texas 78070<br>
 
 <!-- Login Form -->
 <div id="dialog-form" style="display:none;">
-<div id="fb-root"></div>
+<div id="fb-root">vishnu</div>
 <script type="text/javascript">
     //<![CDATA[  
 	 window.fbAsyncInit = function() {
@@ -637,6 +638,58 @@ Spring Branch, Texas 78070<br>
 </section>
 </div>
 
-<script type="text/javascript">if(!NREUMQ.f){NREUMQ.f=function(){NREUMQ.push(["load",new Date().getTime()]);var e=document.createElement("script");e.type="text/javascript";e.src=(("http:"===document.location.protocol)?"http:":"https:")+"//"+"js-agent.newrelic.com/nr-100.js";document.body.appendChild(e);if(NREUMQ.a)NREUMQ.a();};NREUMQ.a=window.onload;window.onload=NREUMQ.f;};NREUMQ.push(["nrfj","beacon-6.newrelic.com","2fd3835cf3","2231017","NlIBYhBSDEAFUhVbCQ8YNkQLHAtdAFQZHBYJRw==",0,36,new Date().getTime(),"","","","",""]);</script>
+<!-- Email This page share widget --> 
+<div id="dialog-emailthisshare" style="display:none;">
+<section class="popup_bg"> </section>
+  <section class="pop_up_contaner" style="top:17px;">
+    <article class="popUp_top">Email Prices <a href="javascript:void(0);" id="EmailThisCLose" class="cross"> </a></article>
+     <article class="popUp_bot">
+        <form id="emailThisForm">
+        <div class="sin_in">
+           <p class="validateTips"></p>
+      <dl>
+       <dt>Your Name</dt>
+       <dd><input name="display_name" id="emailthisshare_name" placeholder="e.g. John Smith" type="text"></dd>
+      </dl>
+	  <dl>
+       <dt>Recipient’s Email</dt>
+       <dd><input name="emailthisshare_email" id="emailthisshare_email" placeholder="eg. username@domain.com" type="text"></dd>
+      </dl>
+      
+      <dl>
+       <dt>Your Message</dt>
+       <dd><textarea id="emailthis_msg" name="emailthis_msg" style="width:500px;">Check out these low atorvastatin prices I found at eDrugSearch!</textarea></dd>
+      </dl>
+     </div>
+      <div class="sign_in_btn">
+      	<div class="row">
+			<input type="button" id="emailthis_submit" value="Send Email" class="orange_brn_small" name="emailthis_submit">
+       </div>
+       <div class="floatright padT15">
+       		<a id="emailthiscancel" class="signUP2" href="javascript:void(0);">Cancel</a> 
+       	</div>
+   	</div>
+        </form>
+     </article>      
+ 
+ </section>
+ 
+</div>
 
-<script type="text/javascript" src="https://js-agent.newrelic.com/nr-100.js"></script></body></html>
+<!-- END --> <script type="text/javascript">
+var _dcq = _dcq || [];
+var _dcs = _dcs || {};
+_dcs.account = '9608819';
+
+(function() {
+var dc = document.createElement('script');
+dc.type = 'text/javascript'; dc.async = true;
+dc.src = '//tag.getdrip.com/9608819.js';
+var s = document.getElementsByTagName('script')[0];
+s.parentNode.insertBefore(dc, s);
+})();
+</script>
+
+<script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"beacon-6.newrelic.com","licenseKey":"2fd3835cf3","applicationID":"2231017","transactionName":"NlIBYhBSDEAFUhVbCQ8YNkQLHAtdAFQZHBYJRw==","queueTime":0,"applicationTime":14,"ttGuid":"","agentToken":"","userAttributes":"","errorBeacon":"jserror.newrelic.com","agent":"js-agent.newrelic.com\/nr-338.min.js"}</script>
+
+<script src="https://js-agent.newrelic.com/nr-338.min.js"></script></body></html>
