--- a/c/cl/cli/clicksvenue.com.html
+++ b/c/cl/cli/clicksvenue.com.html
@@ -1,20 +1,21 @@
-<!--The following is the downloaded HTML source of the clicksvenue.com privacy policy that was archived on 2013-08-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130823204944id_/http%3A//www.clicksvenue.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the clicksvenue.com privacy policy that was archived on 2014-02-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140228053859id_/https%3A//www.clicksvenue.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="en" id="guest"><head>
 	<meta charset="utf-8">
-	<title>Technology - Clicksvenue</title>
-	<meta name="keywords" content="clicksvenue's technology, advertising platform, auction based advertising, roi optimizer, ad optimisation,
-			contextual targeting, geo targeting, filter, white list, black list, bidding for ad impressions,
-			targetting technologies, geo filtering, accurate reporting, ad statistics, dedicated account manager">
-<meta name="description" content="ClicksVenue's state of the art advertisng and publishing platform.">
-	<link rel="stylesheet" href="/home/css/css.css?version=12.2801" type="text/css" media="screen">
+	<title>Privacy policy - Clicksvenue</title>
+	<meta name="keywords" content="Clicksvenue's technology, advertising platform, auction based advertising, roi optimizer, ad optimisation,
+		contextual targeting, geo targeting, filter, white list, black list, bidding for ad impressions,
+		targetting technologies, geo filtering, accurate reporting, ad statistics, dedicated account manager">
+<meta name="description" content="Clicksvenue's state of the art advertising and publishing platform.">
+	<link rel="stylesheet" href="/home/css/css.css?version=12.3000" type="text/css" media="screen">
+<link rel="stylesheet" href="/css/brand.css?version=12.3000" type="text/css" media="screen">
 	<!-- <script src="http://cdn.jquerytools.org/1.2.6/full/jquery.tools.min.js"></script> -->
-	<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="/home/js/html5.js?version=12.2801" type="text/javascript"></script>
-<script src="/home/js/jquery.js?version=12.2801" type="text/javascript"></script>
-<script src="/home/js/plugins.js?version=12.2801" type="text/javascript"></script>
-<script src="/home/js/select2.js?version=12.2801" type="text/javascript"></script>
-<script src="/home/js/global.js?version=12.2801" type="text/javascript"></script>
+	<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="/home/js/html5.js?version=12.3000" type="text/javascript"></script>
+<script src="/home/js/jquery.js?version=12.3000" type="text/javascript"></script>
+<script src="/home/js/plugins.js?version=12.3000" type="text/javascript"></script>
+<script src="/home/js/select2.js?version=12.3000" type="text/javascript"></script>
+<script src="/home/js/global.js?version=12.3000" type="text/javascript"></script>
 	<script type="text/javascript">
 		var _gaq = _gaq || [];
 		_gaq.push(['_setAccount', 'UA-31959670-1']);
@@ -30,17 +31,17 @@
 		window.captchaUrlForImage =  '/captcha/image';
 		window.captchaUrlForId = '/captcha/generate-id';
 	</script>
+	<link rel="shortcut icon" href="/images/fav.ico">
 </head>
 <body>
 	<header>
 		<div class="inside">
 			<div class="left">
-				<a href="/"><img src="/home/images/logo.png" alt="" id="logo"></a>
+				<a href="/"><img src="/images/logo.png" alt="" id="logo"></a>
 			</div>
 			<div class="right">
 				<nav>
-										<a href="/about-us" class="menu-item">About us</a>
-					<a href="/technology" class="menu-item">Technology</a>
+					<a href="/about-us" class="menu-item">About us</a>					<a href="/technology" class="menu-item">Technology</a>
 					<a href="/contact" class="menu-item">Contact us</a>
 											<a href="#" id="login_button"><span>Login</span></a>
 						<a href="/signup/advertiser" class="menu-item menu-signup"><span>Signup</span></a>
@@ -68,8 +69,8 @@
 		<div class="step captcha">
 			<p>
 				<input maxlength="7" type="text" name="captcha" placeholder="Captcha text" class="text captcha">
-				<img src="/captcha/image?captchaId=cc0c04f182f600523939450cd5de05ee" border="0" class="captcha_img">
-				<input type="hidden" name="captcha_id" class="captcha_id" value="cc0c04f182f600523939450cd5de05ee">
+				<img src="/captcha/image?captchaId=72f8a8a63659cb674d2ea02888b86ca5" border="0" class="captcha_img">
+				<input type="hidden" name="captcha_id" class="captcha_id" value="72f8a8a63659cb674d2ea02888b86ca5">
 				<a href="#" class="captcha_refresh">Refresh text</a>
 			</p>
 		</div>
@@ -87,47 +88,35 @@
 	</header>
 	<div class="page_wrapper">
 		<div class="head">
-			<h1>Privacy Policy</h1>
+			<h1>Privacy policy</h1>
 		</div>
 		<div class="body">
 			<div class="shadow_top"></div>
 			<div class="inside">
 				<aside>
 					<nav>
+	<a href="/about-us">About us</a>	<a href="/technology">Technology</a>
 	<a href="/privacy" class="current">Privacy policy</a>
-	<a href="/terms">Terms of use</a>
-	<a href="/technology">Technology</a>
-	<a href="/guidelines">Guidelines</a>
-	<a href="/frequently-asked-questions">F. A. Q.</a>
-	<a href="/minimum-bids">Bid limits</a>
-	<a href="/about-us">About us</a>
-	<a href="/contact">Contact us</a>
+	<a href="/terms">Terms &amp; conditions</a>
+	<a href="/guidelines">Guidelines</a>	<a href="/minimum-bids">List of minimum bids</a>	<a href="/frequently-asked-questions">FAQ</a>	<a href="/contact">Contact us</a>
 </nav>
 				</aside>
 				<div class="body_right">
-					<p>
-						This Privacy Policy governs the manner in which ClickMedia GmbH collects, uses, maintains and discloses information collected from users (each, a "User") of the www.clicksvenue.com website ("Site"). This privacy policy applies to the Site and all products and services offered by ClickMedia GmbH.
-					</p>
+					<p>This Privacy Policy governs the manner in which Clicksvenue collects, uses, maintains and discloses information collected from users (each, a "User") of the www.redmanision.net website ("Site"). This privacy policy applies to the Site and all products and services offered by Clicksvenue.</p>
+
 					<h3>Personal identification information</h3>
-					<p>
-						We may collect personal identification information from Users in a variety of ways, including, but not limited to, when Users visit our site, register on the site, place an order, fill out a form, and in connection with other activities, services, features or resources we make available on our Site. Users may be asked for, as appropriate, name, email address, mailing address, phone number, credit card information. Users may, however, visit our Site anonymously. We will collect personal identification information from Users only if they voluntarily submit such information to us. Users can always refuse to supply personally identification information, except that it may prevent them from engaging in certain Site related activities.
-					</p>
-					<h3>
-						Non-personal identification information
-					</h3>
-					<p>
-						We may collect non-personal identification information about Users whenever they interact with our Site. Non-personal identification information may include the browser name, the type of computer and technical information about Users means of connection to our Site, such as the operating system and the Internet service providers utilized and other similar information.
-					</p>
-					<h3>
-						Web browser cookies
-					</h3>
+					<p>We may collect personal identification information from Users in a variety of ways when they visit our site, including, but not limited to, registering on the site, placing an order, filling out a form and in connection with other activities, services, features or resources we make available on our Site. Users may be asked for, as appropriate, name, email address, mailing address, phone number and credit card information. Users may, however, visit our Site anonymously. We will collect personal identification information from Users only if they voluntarily submit such information to us. Users can always refuse to provide personal identification information, however, it may prevent them from engaging in certain Site related activities.</p>
+
+					<h3>Non-personal identification information</h3>
+					<p>We may collect non-personal identification information about Users whenever they interact with our Site. Non-personal identification information may include the browser name, the type of computer and technical information about Users by means of connection to our Site, such as the operating system, Internet service providers utilized and other similar information.</p>
+
+					<h3>Web browser cookies</h3>
 					<p>
 						Our Site may use "cookies" to enhance User experience. User's web browser places cookies on their hard drive for record-keeping purposes and sometimes to track information about them. User may choose to set their web browser to refuse cookies, or to alert you when cookies are being sent. If they do so, note that some parts of the Site may not function properly.
 					</p>
+
 					<h3>How we use collected information</h3>
-					<p>
-						ClickMedia GmbH collects and uses Users personal information for the following purposes:
-					</p>
+					<p>Our Site may use "cookies" to enhance User experience. Users’ web browser places cookies on their hard drive for record-keeping purposes and sometimes to track information about them. Users may choose to set their web browser to refuse cookies or to alert them when cookies are being sent. If they do so, note that some parts of the Site may not function properly.</p>
 					<ul>
 						<li>
 							To personalize user experience<br>
@@ -135,15 +124,15 @@
 						</li>
 						<li>
 							To improve our Site<br>
-							We continually strive to improve our website offerings based on the information and feedback we receive from you.
+							We continually strive to improve our website offerings and features based on the information and feedback we receive from you.
 						</li>
 						<li>
 							To improve customer service<br>
-							Your information helps us to more effectively respond to your customer service requests and support needs.
+							Your information helps us to respond more effectively to your customer service requests and support needs.
 						</li>
 						<li>
 							To process transactions<br>
-							We may use the information Users provide about themselves when placing an order only to provide service to that order. We do not share this information with outside parties except to the extent necessary to provide the service.
+							We may use the information Users provide about themselves when placing an order only to provide service. We do not share this information with outside parties except to the extent necessary to provide the service.
 						</li>
 						<li>
 							To administer a content, promotion, survey or other Site feature<br>
@@ -157,49 +146,38 @@
 					<br>
 
 					<h3>How we protect your information</h3>
-					<p>
-						We adopt appropriate data collection, storage and processing practices and security measures to protect against unauthorized access, alteration, disclosure or destruction of your personal information, username, password, transaction information and data stored on our Site.
-					</p>
-					<p>
-						Sensitive and private data exchange between the Site and its Users happens over a SSL secured communication channel and is encrypted and protected with digital signatures.
-					</p>
+					<p>We adopt appropriate data collection, storage and processing practices and security measures to protect against unauthorized access, alteration, disclosure or destruction of your personal information, username, password, transaction information and any data stored on our Site.</p>
+					<p>Sensitive and private data exchange between the Site and its Users happens over an SSL secured communication channel and is encrypted and protected with digital signatures.</p>
 
 					<h3>Sharing your personal information</h3>
-
-					<p>We do not sell, trade, or rent Users personal identification information to others. We may share generic aggregated demographic information not linked to any personal identification information regarding visitors and users with our business partners, trusted affiliates and advertisers for the purposes outlined above.</p>
+					<p>We do not sell, trade, or rent Users’ personal identification information to others. We may share generic aggregated demographic information not linked to any personal identification information regarding visitors and users with our business partners, trusted affiliates and advertisers for the purposes outlined above.</p>
 
 					<h3>Third party websites</h3>
-
 					<p>Users may find advertising or other content on our Site that link to the sites and services of our partners, suppliers, advertisers, sponsors, licensors and other third parties. We do not control the content or links that appear on these sites and are not responsible for the practices employed by websites linked to or from our Site. In addition, these sites or services, including their content and links, may be constantly changing. These sites and services may have their own privacy policies and customer service policies. Browsing and interaction on any other website, including websites which have a link to our Site, is subject to that website's own terms and policies.</p>
 
 					<h3>Advertising</h3>
-
-					<p>Ads appearing on our site may be delivered to Users by advertising partners, who may set cookies. These cookies allow the ad server to recognize your computer each time they send you an online advertisement to compile non personal identification information about you or others who use your computer. This information allows ad networks to, among other things, deliver targeted advertisements that they believe will be of most interest to you. This privacy policy does not cover the use of cookies by any advertisers.</p>
+					<p>Ads appearing on our site may be delivered to Users by advertising partners, who may set cookies. These cookies allow the ad server to recognize your computer each time they send you an online advertisement to compile non-personal identification information about you or others who use your computer. This information allows ad networks to, among other things, deliver targeted advertisements that they believe will be of most interest to you. This privacy policy does not cover the use of cookies by any advertisers.</p>
 
 					<h3>Compliance with children's online privacy protection act</h3>
-
 					<p>Protecting the privacy of the very young is especially important. For that reason, we never collect or maintain information at our Site from those we actually know are under 13, and no part of our website is structured to attract anyone under 13.</p>
 
 					<h3>Changes to this privacy policy</h3>
-
-					<p>ClickMedia GmbH has the discretion to update this privacy policy at any time. When we do, we will revise the updated date at the bottom of this page. We encourage Users to frequently check this page for any changes to stay informed about how we are helping to protect the personal information we collect. You acknowledge and agree that it is your responsibility to review this privacy policy periodically and become aware of modifications.</p>
+					<p>Clicksvenue has the discretion to update this privacy policy at any time. When we do, we will revise the updated date at the bottom of this page. We encourage Users to frequently check this page for any changes to stay informed about how we are helping to protect the personal information we collect. You acknowledge and agree that it is your responsibility to review this privacy policy periodically and become aware of modifications.</p>
 
 					<h3>Your acceptance of these terms</h3>
-
 					<p>By using this Site, you signify your acceptance of this policy. If you do not agree to this policy, please do not use our Site. Your continued use of the Site following the posting of changes to this policy will be deemed your acceptance of those changes.</p>
 
 					<h3>Contacting us</h3>
-
 					<p>
 						If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please contact us at:<br>
-						Clicksvenue GmbH<br>
 						www.clicksvenue.com<br>
+						info@clicksvenue.com<br>
+						Clicksvenue GmbH<br>
 						Switzerland, 8832 Wollerau Sihleggstrasse 23.<br>
 						+34556678899<br>
-						info@clicksvenue.com<br>
 					</p>
 
-					<p>This document was last updated on February 11, 2012</p>
+					<p>This document was last updated on January 16, 2014</p>
 				</div>
 				<div class="clear"></div>
 			</div>
@@ -207,21 +185,20 @@
 	</div>	<footer>
 	<div class="footer_top">
 		<div class="inside">
-			<a href="/about-us"><strong>About us</strong></a>
-			<a href="/technology"><strong>Technology</strong></a>
-			<a href="/privacy"><strong>Privacy Policy</strong></a>
-			<a href="/terms"><strong>Terms &amp; Conditions</strong></a>
-			<a href="/guidelines"><strong>Guidelines</strong></a>
-			<a href="/frequently-asked-questions"><strong>F. A. Q.</strong></a>
-			<a href="/contact"><strong>Contact us</strong></a>
-			<div class="clear"></div>
+			<a href="/about-us"><strong>About us</strong></a>			<a href="/technology"><strong>Technology</strong></a>
+			<a href="/privacy"><strong>Privacy policy</strong></a>
+			<a href="/terms"><strong>Terms &amp; conditions</strong></a>
+			<a href="/guidelines"><strong>Guidelines</strong></a>			<a href="/frequently-asked-questions"><strong>FAQ</strong></a>			<a href="/contact"><strong>Contact us</strong></a>
+			<a href="https://www.facebook.com/clicksvenue" class="follow fb" target="_blank"></a>
+<a href="https://twitter.com/Clicksvenue" class="follow tw" target="_blank"></a>
+<a href="https://plus.google.com/+Clicksvenuenetwork" class="follow gp" target="_blank"></a>			<div class="clear"></div>
 		</div>
 		<div class="shadow_top"></div>
 		<div class="shadow_bottom"></div>
 	</div>
 	<div class="footer_bottom">
-		<p>Copyright © 2011 - 2013 ClicksVenue GmbH - All rights reserved <span class="servertime">Server Time: August 23, 2013, 1:49 pm</span></p>
+		<p>Copyright © 2011 - 2014 Clicksvenue GmbH - All rights reserved <span class="servertime">Server Time: February 27, 2014, 10:38 pm</span></p>
 	</div>
-</footer>	<script src="/home/js/captcha.js?version=12.2801" type="text/javascript"></script>
+</footer>	<script src="/home/js/captcha.js?version=12.3000" type="text/javascript"></script>
 
 </body></html>
