pagerank.eu.com (archived on 2014-02-28)
{
  "alexa_rank": 122381,
  "analysis_subcorpus": true,
  "categories": "parked",
  "char_count": 2800,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.2,
  "homepage_snapshot_redirected_domain": "pagerank.eu.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140228152357id_/http://www.pagerank.eu.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140228152357id_/http%3A//pagerank.eu.com",
  "interval": "2014_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "pagerank.eu.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140228062302id_/http%3A//www.pagerank.eu.com/page/privacy-policy",
  "policy_title": "Privacy Policy - Page Rank Checker - Check your site stats and Page Rank",
  "policy_url": "pagerank.eu.com/page/privacy-policy",
  "sha1": "574a7ddd1d2d13c4d5e396de5c55c7e62a301118",
  "simhash": 3757295776639005506,
  "simhash_updated": false,
  "site_hostname": "pagerank.eu.com",
  "site_url": "http://pagerank.eu.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20140228062302",
  "word_count": 457,
  "year": 2014
}

--- a/p/pa/pag/pagerank.eu.com.html
+++ b/p/pa/pag/pagerank.eu.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pagerank.eu.com privacy policy that was archived on 2013-10-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131031173507id_/http%3A//www.pagerank.eu.com/page/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pagerank.eu.com privacy policy that was archived on 2014-02-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140228062302id_/http%3A//www.pagerank.eu.com/page/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -132,154 +132,154 @@ google_ad_height = 90;
 </thead>
 <tbody>
 			<tr>
-			<td><img src="/filemanager/images/fileicons/favicons.png" alt="break60wellness.com Favicon"></td>
-			<td><a href="/www/break60wellness.com">break60wellness.com</a></td>
+			<td><img src="/filemanager/images/fileicons/favicons.png" alt="anjusea.com Favicon"></td>
+			<td><a href="/www/anjusea.com">anjusea.com</a></td>
 			<td>
 									N/A
 							</td>
-			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="break60wellness.com Google Pagerank"></a></td>
+			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="anjusea.com Google Pagerank"></a></td>
 			<td>$ 540.95</td>
-			<td>9 seconds ago</td>
+			<td>3 seconds ago</td>
 		</tr>
 			<tr>
-			<td><img src="/filemanager/images/fileicons/favicons.png" alt="break60wellness.info Favicon"></td>
-			<td><a href="/www/break60wellness.info">break60wellness.info</a></td>
+			<td><img src="/filemanager/images/fileicons/favicons.png" alt="anjuseattle.com Favicon"></td>
+			<td><a href="/www/anjuseattle.com">anjuseattle.com</a></td>
 			<td>
 									N/A
 							</td>
-			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="break60wellness.info Google Pagerank"></a></td>
+			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="anjuseattle.com Google Pagerank"></a></td>
 			<td>$ 540.95</td>
-			<td>19 seconds ago</td>
+			<td>22 seconds ago</td>
 		</tr>
 			<tr>
-			<td><img src="/filemanager/images/fileicons/favicons.png" alt="break60wellness.net Favicon"></td>
-			<td><a href="/www/break60wellness.net">break60wellness.net</a></td>
+			<td><img src="/filemanager/images/fileicons/favicons.png" alt="ankangsy.com Favicon"></td>
+			<td><a href="/www/ankangsy.com">ankangsy.com</a></td>
 			<td>
 									N/A
 							</td>
-			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="break60wellness.net Google Pagerank"></a></td>
+			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="ankangsy.com Google Pagerank"></a></td>
 			<td>$ 540.95</td>
-			<td>28 seconds ago</td>
+			<td>32 seconds ago</td>
 		</tr>
 			<tr>
-			<td><img src="/filemanager/images/fileicons/favicons.png" alt="breakawaysquash.com Favicon"></td>
-			<td><a href="/www/breakawaysquash.com">breakawaysquash.com</a></td>
+			<td><img src="/filemanager/images/fileicons/favicons.png" alt="ankurgroup.org Favicon"></td>
+			<td><a href="/www/ankurgroup.org">ankurgroup.org</a></td>
 			<td>
 									N/A
 							</td>
-			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="breakawaysquash.com Google Pagerank"></a></td>
+			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="ankurgroup.org Google Pagerank"></a></td>
 			<td>$ 540.95</td>
-			<td>41 seconds ago</td>
+			<td>45 seconds ago</td>
 		</tr>
 			<tr>
-			<td><img src="/filemanager/images/fileicons/favicons.png" alt="breakingbadfilm.com Favicon"></td>
-			<td><a href="/www/breakingbadfilm.com">breakingbadfilm.com</a></td>
+			<td><img src="/filemanager/images/fileicons/favicons.png" alt="anlook.com Favicon"></td>
+			<td><a href="/www/anlook.com">anlook.com</a></td>
 			<td>
 									N/A
 							</td>
-			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="breakingbadfilm.com Google Pagerank"></a></td>
+			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="anlook.com Google Pagerank"></a></td>
 			<td>$ 540.95</td>
 			<td>1 minute ago</td>
 		</tr>
 			<tr>
-			<td><img src="/filemanager/images/fileicons/favicons.png" alt="breastfunding.com Favicon"></td>
-			<td><a href="/www/breastfunding.com">breastfunding.com</a></td>
+			<td><img src="/filemanager/images/fileicons/favicons.png" alt="annaclorito.com Favicon"></td>
+			<td><a href="/www/annaclorito.com">annaclorito.com</a></td>
 			<td>
 									N/A
 							</td>
-			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="breastfunding.com Google Pagerank"></a></td>
+			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="annaclorito.com Google Pagerank"></a></td>
+			<td>$ 540.95</td>
+			<td>1 minute ago</td>
+		</tr>
+			<tr>
+			<td><img src="/filemanager/images/fileicons/favicons.png" alt="annashumaker.com Favicon"></td>
+			<td><a href="/www/annashumaker.com">annashumaker.com</a></td>
+			<td>
+									N/A
+							</td>
+			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="annashumaker.com Google Pagerank"></a></td>
 			<td>$ 540.95</td>
 			<td>2 minutes ago</td>
 		</tr>
 			<tr>
-			<td><img src="/filemanager/images/fileicons/favicons.png" alt="breathe-freedom.com Favicon"></td>
-			<td><a href="/www/breathe-freedom.com">breathe-freedom.com</a></td>
+			<td><img src="/filemanager/images/fileicons/favicons.png" alt="annarbordank.com Favicon"></td>
+			<td><a href="/www/annarbordank.com">annarbordank.com</a></td>
 			<td>
 									N/A
 							</td>
-			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="breathe-freedom.com Google Pagerank"></a></td>
+			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="annarbordank.com Google Pagerank"></a></td>
 			<td>$ 540.95</td>
 			<td>2 minutes ago</td>
 		</tr>
 			<tr>
-			<td><img src="/filemanager/images/fileicons/favicons.png" alt="breatheeathappy.com Favicon"></td>
-			<td><a href="/www/breatheeathappy.com">breatheeathappy.com</a></td>
+			<td><img src="/filemanager/images/fileicons/favicons.png" alt="annbajartmd.com Favicon"></td>
+			<td><a href="/www/annbajartmd.com">annbajartmd.com</a></td>
 			<td>
 									N/A
 							</td>
-			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="breatheeathappy.com Google Pagerank"></a></td>
+			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="annbajartmd.com Google Pagerank"></a></td>
 			<td>$ 540.95</td>
 			<td>2 minutes ago</td>
 		</tr>
 			<tr>
-			<td><img src="/filemanager/images/fileicons/favicons.png" alt="breathemedia.info Favicon"></td>
-			<td><a href="/www/breathemedia.info">breathemedia.info</a></td>
+			<td><img src="/filemanager/images/fileicons/favicons.png" alt="anneadair.com Favicon"></td>
+			<td><a href="/www/anneadair.com">anneadair.com</a></td>
 			<td>
 									N/A
 							</td>
-			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="breathemedia.info Google Pagerank"></a></td>
+			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="anneadair.com Google Pagerank"></a></td>
 			<td>$ 540.95</td>
 			<td>2 minutes ago</td>
 		</tr>
 			<tr>
-			<td><img src="/filemanager/images/fileicons/favicons.png" alt="breathesports.org Favicon"></td>
-			<td><a href="/www/breathesports.org">breathesports.org</a></td>
+			<td><img src="/filemanager/images/fileicons/favicons.png" alt="anneandcurt.com Favicon"></td>
+			<td><a href="/www/anneandcurt.com">anneandcurt.com</a></td>
 			<td>
 									N/A
 							</td>
-			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="breathesports.org Google Pagerank"></a></td>
+			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="anneandcurt.com Google Pagerank"></a></td>
 			<td>$ 540.95</td>
-			<td>3 minutes ago</td>
+			<td>2 minutes ago</td>
 		</tr>
 			<tr>
-			<td><img src="/filemanager/images/fileicons/favicons.png" alt="greenlabelusa.com Favicon"></td>
-			<td><a href="/www/greenlabelusa.com">greenlabelusa.com</a></td>
+			<td><img src="/filemanager/images/fileicons/favicons.png" alt="annefarleyod.com Favicon"></td>
+			<td><a href="/www/annefarleyod.com">annefarleyod.com</a></td>
 			<td>
 									N/A
 							</td>
-			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="greenlabelusa.com Google Pagerank"></a></td>
+			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="annefarleyod.com Google Pagerank"></a></td>
 			<td>$ 540.95</td>
-			<td>3 minutes ago</td>
+			<td>5 minutes ago</td>
 		</tr>
 			<tr>
-			<td><img src="/filemanager/images/fileicons/favicons.png" alt="breawest.net Favicon"></td>
-			<td><a href="/www/breawest.net">breawest.net</a></td>
+			<td><img src="/filemanager/images/fileicons/favicons.png" alt="anneglennonesq.com Favicon"></td>
+			<td><a href="/www/anneglennonesq.com">anneglennonesq.com</a></td>
 			<td>
 									N/A
 							</td>
-			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="breawest.net Google Pagerank"></a></td>
+			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="anneglennonesq.com Google Pagerank"></a></td>
 			<td>$ 540.95</td>
-			<td>3 minutes ago</td>
+			<td>5 minutes ago</td>
 		</tr>
 			<tr>
-			<td><img src="/filemanager/images/fileicons/favicons.png" alt="breedbeads.com Favicon"></td>
-			<td><a href="/www/breedbeads.com">breedbeads.com</a></td>
+			<td><img src="/filemanager/images/fileicons/favicons.png" alt="anneglennonlaw.com Favicon"></td>
+			<td><a href="/www/anneglennonlaw.com">anneglennonlaw.com</a></td>
 			<td>
 									N/A
 							</td>
-			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="breedbeads.com Google Pagerank"></a></td>
+			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="anneglennonlaw.com Google Pagerank"></a></td>
 			<td>$ 540.95</td>
-			<td>3 minutes ago</td>
+			<td>5 minutes ago</td>
 		</tr>
 			<tr>
-			<td><img src="/filemanager/images/fileicons/favicons.png" alt="breezyslist.net Favicon"></td>
-			<td><a href="/www/breezyslist.net">breezyslist.net</a></td>
+			<td><img src="/filemanager/images/fileicons/favicons.png" alt="anneto.net Favicon"></td>
+			<td><a href="/www/anneto.net">anneto.net</a></td>
 			<td>
 									N/A
 							</td>
-			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="breezyslist.net Google Pagerank"></a></td>
+			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="anneto.net Google Pagerank"></a></td>
 			<td>$ 540.95</td>
-			<td>4 minutes ago</td>
-		</tr>
-			<tr>
-			<td><img src="/filemanager/images/fileicons/favicons.png" alt="brendanasr.com Favicon"></td>
-			<td><a href="/www/brendanasr.com">brendanasr.com</a></td>
-			<td>
-									N/A
-							</td>
-			<td><a href="/google-page-rank/0"><img src="/templates/default/assets/img/pagerank/pr_0.gif" alt="brendanasr.com Google Pagerank"></a></td>
-			<td>$ 540.95</td>
-			<td>4 minutes ago</td>
+			<td>5 minutes ago</td>
 		</tr>
 	</tbody>
 </table>
@@ -294,7 +294,7 @@ google_ad_height = 90;
 		</div>
 			<div class="marginBottom_10">
 			
-				<iframe src="http://affiliate.godaddy.com/ad/76AB9BBCF4A70188FFB865EA20F46DE548404C278CD9A21A8BCEE0C49097E234" width="300" height="250" frameborder="0" scrolling="no" marginwidth="0" marginheight="0" hspace="0" allowtransparency="true"></iframe>
+				<a href="http://2trweb.com" target="_blank"><img src="/filemanager/userfiles/banners/1402061634047zcfps.png" width="300" height="250"></a>
 
 						<div class="clear"></div>
 		</div>
@@ -303,7 +303,7 @@ google_ad_height = 90;
 	</div>
 	<div class="footer">
 		<div class="pull-left copyright">					
-			Copyright © 2013 Page Rank Checker, All Rights Reserved.<br>
+			Copyright © 2014 Page Rank Checker, All Rights Reserved.<br>
 			Any other Brand Information used from us are the properties of their respective owners.
 		</div>
 		<div class="pull-right footer_menu">
