beanstalk-inc.com (archived on 2014-02-28)
{
  "alexa_rank": 350625,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 2039,
  "classifier_probability": 0.89,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.21,
  "homepage_snapshot_redirected_domain": "beanstalk-inc.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140301001416id_/http://www.beanstalk-inc.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140301001416id_/http%3A//beanstalk-inc.com",
  "interval": "2014_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "beanstalk-inc.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140228062641id_/http%3A//www.beanstalk-inc.com/bsi/privacy.htm",
  "policy_title": "Beanstalk's Privacy Policy",
  "policy_url": "beanstalk-inc.com/bsi/privacy.htm",
  "sha1": "2c76073e85bbcdb9cf3523bed6879b5be61f3289",
  "simhash": 362032327786355564,
  "simhash_updated": false,
  "site_hostname": "beanstalk-inc.com",
  "site_url": "http://beanstalk-inc.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20140228062641",
  "word_count": 347,
  "year": 2014
}

--- a/b/be/bea/beanstalk-inc.com.html
+++ b/b/be/bea/beanstalk-inc.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the beanstalk-inc.com privacy policy that was archived on 2013-01-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130128192137id_/http%3A//www.beanstalk-inc.com/bsi/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the beanstalk-inc.com privacy policy that was archived on 2014-02-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140228062641id_/http%3A//www.beanstalk-inc.com/bsi/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en-us"><head>
 	<title>Beanstalk's Privacy Policy</title>
@@ -10,11 +10,12 @@
 <body>
 <div id="main">
 	<div id="section">
-		<div id="header">
-			<span>Top 10?<br>
-				We Can Do That!<br><br><br>
-				Toll Free: 877-370-9750</span>
-		</div>
+<div id="header">
+<a id="header-link" href="/"></a>
+<span>Top 10?<br>
+We Can Do That!<br><br><br>
+Toll Free: 877-370-9750</span>
+</div>
 <ul id="main-navigation">
 	<li><a href="/bsi/contact.htm" class="contact">Contact Us</a></li>
 	<li><a href="/">Home</a></li>
@@ -39,32 +40,18 @@
 <li class="social">
 <g:plusone></g:plusone></li>
 <br>
-<li class="social"><a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="beanstalkseo" target="_blank" rel="nofollow">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script></li>
+<li class="social"><a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="beanstalkseo" target="_blank" rel="nofollow">Tweet</a><script src="https://dnn506yrbagrg.cloudfront.net/pages/scripts/0013/1363.js?439001" async="" type="text/javascript"></script><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script></li>
 </ol>
 </div>
-<b>Beanstalk:</b>
-<ul>
-<li><a href="/bsi/ethics.htm">Our Ethics</a></li>
-<li><a href="/bsi/about-us.htm">About Beanstalk</a></li>
-<li><a href="/bsi/privacy.htm">Privacy Policy</a></li>
-<li><a href="/blog/">Our SEO Blog</a></li>
-</ul>
 <b>Additional Info:</b>
 <ul>
-<li><a href="/resources/recommended/sitepoint.htm">The SEM Kit</a></li>
 <li><a href="/info/">SEO Resources</a></li>
 <li><a href="/tactics/">SEO Tactics</a></li>
 </ul>
-<b>Latest SEO Articles:</b>
+<b>Published On:</b>
 <ul>
-	<li><a href="/articles/copywriting/enrich-blog.html">Enrich Your Blog</a></li>
-	<li><a href="/articles/social-media/facebook-devil.htm">Facebook Not The Devil</a></li>
-	<li><a href="/articles/seo/understanding-canonical.htm">Understanding Canonical</a></li>
-	<li><a href="/articles/seo/google-plus-seo.html">Google+ &amp; SEO</a></li>
-	<li><a href="/articles/news/net-neutrality-2.htm">What Is Net Neutrality</a></li>
-	<li><a href="/articles/design/holiday-conversions.html">Increasing Conversions</a></li>
 	<div class="images">
-	<a href="/articles/#sitepoint"><img src="/img/seo-sites/published-on.gif" width="136" height="43" alt="SEO articles and blog published on ..."></a>
+	<img src="/img/seo-sites/published-on.gif" width="136" height="43" alt="SEO articles and blog published on ...">
 	</div>
 </ul>
 	<b>Helping Out:</b>
@@ -85,81 +72,53 @@
 					There is no more serious offence that can be made by a search engine optimization firm that to share the information given to them by a client with those outside the company. We realize that the information that we receive as SEO's can be extremely confidential and often includes credit card information, FTP information and more. This information will be kept in the hands of <a href="/bsi/about-us.htm">Mary Davies, of Beanstalk Search Engine Optimization</a> and will be given to staff solely on a need-to-know basis (for example, the SEO working on your site will need FTP access to your server).
 </p>
 			</div>
-		</div>
-	</div>
-	<div id="footer">
-		<ul>
-			<li>Beanstalk Search Engine Optimization:
-			<ul>
-				<li><a href="/">SEO Services</a></li>
-				<li><a href="/bsi/from-canada.htm">Victoria, Canada</a></li>
-				<li class="last"><a href="/sitemap.htm">SEO Sitemap</a></li>
-			</ul>
-		  </li>
-	  </ul>
-		<ul>
-			<li>Search Engine Optimization Services: 
-            <ul>
-            	<li><a href="/services/guaranteed.htm">Business Services</a></li>
-			  <li><a href="/services/affordable.htm">Affordable SEO Services</a></li>
-			  <li><a href="/services/ppc.html">Pay Per Click Management</a></li>
-				<li><a href="/services/training.htm">SEO Training</a></li>
-				<li><a href="/services/consulting.htm">SEO Consulting Services</a></li>
-				<li><a href="/services/paid-review.htm">Paid Review</a></li>
-				<li><a href="/services/copywriting.html">Copywriting</a></li>
-			  <li><a href="/services/link-building.htm">Link Popularity Services</a></li>
-			  <li><a href="/services/conversion-optimization.htm">Conversion Optimization</a></li>
-				<li class="last"><a href="/services/reseller.htm">Reseller SEO</a> </li>
-			</ul>				
-		  </li>
-	  </ul>
-		<ul>
-			<li>SEO Articles Archives:
-				<ul>
-					<li><a href="/articles/#links">Link Building Articles</a></li>
-					<li><a href="/articles/#ppc">Pay-Per-Click</a></li>
-					<li><a href="/articles/#sep">SEO Articles</a></li>
-					<li><a href="/articles/#design">SE-Friendly Web Design</a></li>
-					<li><a href="/articles/#newsletters">Past Newsletters</a></li>
-				</ul>			
-			</li>
-		</ul>
-		<ul>
-			<li>High Ranking Tactics:
-				<ul>
-					<li><a href="/tactics/white-hat.htm">White Hat</a></li>
-					<li><a href="/tactics/grey-hat.htm">Grey Hat</a></li>
-					<li><a href="/tactics/black-hat.htm">Black Hat</a></li>
-					<li class="last"><a href="/tactics/reporting-spam.htm">Report SEO &amp; Search Engine Spam</a></li>				
-				</ul>
-			</li>
-		</ul>
-		<ul>
-			<li>SEO Resources:
-				<ul>
-					<li><a href="/tools/">Free SEO Tools</a> </li>
-					<li><a href="/info/directories-major.htm">Directories</a></li>
-					<li><a href="/info/search-engines-major.htm">Major Search Engines</a></li>
-					<li><a href="/info/ppc.htm">PPC Engines</a></li>
-					<li><a href="/info/search-engines.htm">Secondary Search Engines &amp; Directories</a></li>
-				  <li><a href="/info/glossary.htm">Glossary</a></li>
-				  <li><a href="/rss.php">RSS Feeds</a></li>
-				  <li class="last"><a href="/bsi/referral.php" target="_blank">SEO Referral</a></li>		
-				</ul>
-		  </li>
-		</ul>
-	</div>
-	<div id="valid">
-		<a href="http://www.w3.org/WAI/WCAG1AAA-Conformance" title="Explanation of Level Triple-A Conformance"><img src="/img/w3c-wai-aaa-wcag-1.0-compliant.gif" width="115" height="15" alt="Level Triple-A conformance icon, W3C-WAI Web Content Accessibility Guidelines 1.0"></a>
-		<a href="http://validator.w3.org/checklink?uri=http://www.beanstalk-inc.com"><img src="/img/w3c-link-compliant.gif" width="81" height="15" alt=""></a>
-		<a href="http://validator.w3.org/check?uri=referer"><img src="/img/w3c-xhtml-1.0-compliant.gif" width="81" height="15" alt="Valid XHTML 1.0!"></a>
-		<a href="http://jigsaw.w3.org/css-validator/validator?uri=http://www.beanstalk-inc.com"><img src="/img/w3c-css-2.0-compliant.gif" width="81" height="15" alt="Valid CSS!"></a>
-	</div>
-	<div id="copy">
-    Copyright© 2004-2013<br>
-		Beanstalk Search Engine Optimization, Inc.<br>
-		All rights reserved.</div>
-    </div>
+</div>
+</div>
+
+<div id="footer">
+<ul>
+<li>Beanstalk Search Engine Optimization:
+<ul>
+<li><a href="/">Beanstalk SEO</a></li>
+<li><a href="/bsi/from-canada.htm">Victoria, Canada</a></li>
+<li><a href="/bsi/ethics.htm">Our Ethics</a></li>
+<li><a href="/bsi/about-us.htm">About Beanstalk</a></li>
+<li class="last"><a href="/bsi/privacy.htm">Privacy Policy</a></li>
+</ul>
+</li>
+
+</ul>
+<ul>
+<li>Internet Marketing Services: 
+<ul>
+<li><a href="/services/guaranteed.htm">Business Services</a></li>
+<li><a href="/services/affordable.htm">Affordable SEO Services</a></li>
+<li><a href="/services/ppc.html">Pay Per Click Management</a></li>
+<li><a href="/services/training.htm">SEO Training</a></li>
+<li><a href="/services/consulting.htm">SEO Consulting Services</a></li>
+<li><a href="/services/paid-review.htm">Site Audits</a></li>
+<li><a href="/services/copywriting.html">Copywriting</a></li>
+<li><a href="/services/link-building.htm">Link Popularity Services</a></li>
+<li><a href="/services/conversion-optimization.htm">Conversion Optimization</a></li>
+<li class="last"><a href="/services/reseller.htm">Reseller SEO</a> </li>
+</ul>				
+</li>
+</ul>
+</div>
+
+<div id="valid">
+<a href="http://www.w3.org/WAI/WCAG1AAA-Conformance" title="Explanation of Level Triple-A Conformance"><img src="/img/w3c-wai-aaa-wcag-1.0-compliant.gif" width="115" height="15" alt="Level Triple-A conformance icon, W3C-WAI Web Content Accessibility Guidelines 1.0"></a>
+<a href="http://validator.w3.org/checklink?uri=http://www.beanstalk-inc.com"><img src="/img/w3c-link-compliant.gif" width="81" height="15" alt=""></a>
+<a href="http://validator.w3.org/check?uri=referer"><img src="/img/w3c-xhtml-1.0-compliant.gif" width="81" height="15" alt="Valid XHTML 1.0!"></a>
+<a href="http://jigsaw.w3.org/css-validator/validator?uri=http://www.beanstalk-inc.com"><img src="/img/w3c-css-2.0-compliant.gif" width="81" height="15" alt="Valid CSS!"></a>
+</div>
+
+<div id="copy">
+Copyright© 2004-2014<br>
+Beanstalk Search Engine Optimization, Inc.<br>
+All rights reserved.</div>
+</div>
+
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -169,6 +128,15 @@ try {
 var pageTracker = _gat._getTracker("UA-9711635-1");
 pageTracker._trackPageview();
 } catch(err) {}</script>
+
 <script type="text/javascript" src="//assets.pinterest.com/js/pinit.js"></script>
+
+<script type="text/javascript">
+setTimeout(function(){var a=document.createElement("script");
+var b=document.getElementsByTagName("script")[0];
+a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0013/1363.js?"+Math.floor(new Date().getTime()/3600000);
+a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
+</script>
+
 
 </body></html>
